Adds reference in the host for the lib, edit svc file

--- a/TodoServiceHost/TodoServiceHost.csproj
+++ b/TodoServiceHost/TodoServiceHost.csproj
@@ -86,6 +86,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TodoServiceLibrary\TodoServiceLibrary.csproj">
+      <Project>{4011f33b-48b3-4b4a-bd53-0e6bab9ec110}</Project>
+      <Name>TodoServiceLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
