Renames TodoServiceHost interface contract and adds comments

--- a/TodoServiceHost/TodoServiceHost.csproj
+++ b/TodoServiceHost/TodoServiceHost.csproj
@@ -74,7 +74,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ITodoService.cs" />
+    <Compile Include="IServiceContractExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
